# protogotchi

./: .gitignore  Cargo.toml  README.md  TODO.md
deploy/: README.md  playbook.yml
deploy/ansible/roles/protogotchi/files/: protogotchi.service
deploy/ansible/roles/protogotchi/tasks/: main.yml
src/: main.rs  systems.rs
src/hardware/: mod.rs  resources.rs  systems.rs
src/input/: mod.rs  systems.rs
src/menu/: mod.rs  resources.rs  systems.rs
src/plugins/select/: mod.rs  resources.rs  systems.rs
src/settings/: mod.rs  resources.rs  systems.rs
src/settings/wifi/: mod.rs  systems.rs
src/sim/: mod.rs
src/simulator/: mod.rs
src/splash/: mod.rs  systems.rs
